# UnrealUWFTesting

./: CMakeLists.txt  Capture.cpp  Capture.h  CircularBuffer.h  CircularBuffer.h.h  Moment.cpp  Moment.h  UnrealUWFTesting.sln  UnrealUWFTesting.vcxproj  UnrealUWFTesting.vcxproj.filters  Vector.h  asdf.uwf  main.cpp  test.grt  test.uwf  tilting.grt  walking.grt  wingardium.grt
Debug/: UnrealUWFTesting.ilk  vc140.idb
Debug/UnrealUWFTesting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnrealUWFTesting.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Release/UnrealUWFTesting.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  UnrealUWFTesting.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
enc_temp_folder/37c33012b1f69b9265ae741adc6c7454/: main.cpp
enc_temp_folder/d55f99c7ec32e9db81a59a535c8080/: main.cpp
